[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/UI/RailMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Data/UI/map.gd" type="Script" id=2]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("ViewportContainer/RailMap")

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("ViewportContainer/RailMap")

[node name="Map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RailMap" parent="ViewportContainer" instance=ExtResource( 1 )]
size = Vector2( 800, 600 )
handle_input_locally = false
render_target_update_mode = 0

[node name="FullMap" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="FullMap"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.25098, 0.25098, 0.25098, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenderTexture" type="TextureRect" parent="FullMap"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayMap" type="TextureRect" parent="."]
anchor_right = 0.33
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
